# llm-lora-distillation-lab

./: .gitignore  README.md  index.html  pyproject.toml  release.html  requirements-colab.txt  requirements.txt  sitecustomize.py
article/: article_draft.md  linkedin_post.md  positive_release_post.md  x_post.md
benchmarks/: heldout.jsonl
configs/: benchmark.yaml  distillation.yaml  model.yaml  training.yaml
data/: distilled_accepted.jsonl  protocol.md  protocol_version.json  seed_scenarios.jsonl  train.jsonl  validation.jsonl
docs/: architecture.md  distillation.md  evaluation_methodology.md  interview_prep.md  limitations.md  lora_explained.md  presentation_examples.md  setup_guide.md
notebooks/: train_lora_colab.ipynb
scripts/: 01_create_protocol.py  02_generate_seed_scenarios.py  03_generate_teacher_outputs.py  04_validate_distilled_data.py  05_freeze_benchmark.py  06_run_base_benchmark.py  07_run_cpu_smoke_test.py  08_train_lora.py  09_run_lora_benchmark.py  10_compare_results.py  11_generate_report.py  12_bootstrap_results.py
src/sidsearch_lora_lab/: __init__.py  config.py  schemas.py
src/sidsearch_lora_lab/data/: generator.py  leakage.py  splitter.py  validator.py
src/sidsearch_lora_lab/distillation/: ollama_client.py  pipeline.py
src/sidsearch_lora_lab/evaluation/: benchmark.py  bootstrap.py  error_analysis.py  metrics.py
src/sidsearch_lora_lab/inference/: generate.py
tests/: test_dataset_leakage.py  test_gradient_flow.py  test_lora_freezing.py  test_metrics.py  test_rule_engine.py  test_schema_validation.py
(+8 files in other folders)
