[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sidsearch-lora-lab"
version = "0.1.0"
description = "Reproducible LoRA fine-tuning and sequence-level distillation lab for a private SidSearch protocol."
requires-python = ">=3.11"
dependencies = [
  "datasets==5.0.0",
  "matplotlib>=3.8",
  "pandas==3.0.3",
  "peft==0.19.1",
  "PyYAML>=6.0",
  "requests==2.34.2",
  "torch==2.13.0",
  "transformers==5.13.0",
  "trl==1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

